vulkan/wsi/wayland: Expose a minImageCount of 3

Exposes a minImageCount of 3 for wayland swapchains and potentially
allocate more images than min in the MAILBOX case to avoid stalling.

Closes: https://gitlab.freedesktop.org/mesa/mesa/-/issues/6249

Signed-off-by: Joshua Ashton <joshua@froggi.es>